flag of Kyrgyzstan

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <img src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
+
   <h1>example</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique voluptas officiis perferendis obcaecati omnis, officia cumque neque accusantium deleniti, a, reiciendis nihil maxime iste veniam placeat vero numquam quas odit.</p>
   <p>Voluptatum libero explicabo commodi facere ex harum debitis repellendus et ratione? Amet quam eos omnis, explicabo incidunt dolorum rem pariatur molestias, soluta sint cumque debitis porro eaque id ex minus.</p>
@@ -18,5 +20,6 @@
   <p>Ratione, sequi ipsa! Dolores quia aspernatur nobis vero est enim eligendi iure officia sint iste distinctio repellendus dolorem id assumenda explicabo, veniam maxime dolor in quisquam ex laboriosam fugiat tempore!</p>
   <p>Suscipit sapiente vero fuga deleniti laboriosam eligendi? Incidunt nemo voluptatem eligendi, adipisci natus corporis neque non. Laboriosam incidunt nulla id harum officiis cum illo qui ipsa repudiandae ad, recusandae expedita.</p>
   <p>Est et nemo sequi voluptas, quia, commodi, iusto accusantium reprehenderit temporibus accusamus cupiditate in necessitatibus quibusdam labore dolores assumenda. Porro quis facere vel tempora rem doloribus labore suscipit, ut id?</p>
+  
 </body>
 </html>
