--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
+  <img class="flag" src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
 
   <h1>example</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique voluptas officiis perferendis obcaecati omnis, officia cumque neque accusantium deleniti, a, reiciendis nihil maxime iste veniam placeat vero numquam quas odit.</p>
-  <p>Voluptatum libero explicabo commodi facere ex harum debitis repellendus et ratione? Amet quam eos omnis, explicabo incidunt dolorum rem pariatur molestias, soluta sint cumque debitis porro eaque id ex minus.</p>
-  <p>Quam exercitationem excepturi obcaecati deleniti consequatur quibusdam quis veniam nemo incidunt accusantium eaque, amet iure harum praesentium ratione? Error beatae illum nihil facilis! Praesentium tenetur assumenda doloribus quis perspiciatis officia!</p>
-  <p>Laborum rem maxime voluptate, odio laudantium soluta, mollitia earum explicabo nobis dolores cupiditate dolorem. Facilis repellat vel, sunt placeat voluptate quisquam voluptas delectus nam ex dolore similique dolorum fugiat illo.</p>
-  <p>Quia, consequatur harum, nam inventore eos quaerat iusto dolores minima amet autem laborum accusantium. Laboriosam laborum, quasi, deserunt ab necessitatibus quod vitae aliquid porro neque soluta eaque. Officia, suscipit mollitia.</p>
-  <p>Aliquam iusto eaque, deserunt, incidunt, quod quam velit ea eos voluptatem quidem molestias. Earum, dicta! Omnis velit illo quis, quaerat ex quae dolores ea error sunt! Corrupti laborum ad labore?</p>
-  <p>Alias tempore dignissimos a facilis deserunt placeat aliquam error necessitatibus? Temporibus labore quos iusto illo explicabo mollitia ex ea consectetur nobis, dolore, repudiandae magni itaque, placeat nemo quisquam error accusantium?</p>
-  <p>Ratione, sequi ipsa! Dolores quia aspernatur nobis vero est enim eligendi iure officia sint iste distinctio repellendus dolorem id assumenda explicabo, veniam maxime dolor in quisquam ex laboriosam fugiat tempore!</p>
-  <p>Suscipit sapiente vero fuga deleniti laboriosam eligendi? Incidunt nemo voluptatem eligendi, adipisci natus corporis neque non. Laboriosam incidunt nulla id harum officiis cum illo qui ipsa repudiandae ad, recusandae expedita.</p>
-  <p>Est et nemo sequi voluptas, quia, commodi, iusto accusantium reprehenderit temporibus accusamus cupiditate in necessitatibus quibusdam labore dolores assumenda. Porro quis facere vel tempora rem doloribus labore suscipit, ut id?</p>
+  <div>
+    <p1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique voluptas officiis perferendis obcaecati omnis, officia cumque neque accusantium deleniti, a, reiciendis nihil maxime iste veniam placeat vero numquam quas odit.</p>
+    <p2>Voluptatum libero explicabo commodi facere ex harum debitis repellendus et ratione? Amet quam eos omnis, explicabo incidunt dolorum rem pariatur molestias, soluta sint cumque debitis porro eaque id ex minus.</p>
+    <p3>Quam exercitationem excepturi obcaecati deleniti consequatur quibusdam quis veniam nemo incidunt accusantium eaque, amet iure harum praesentium ratione? Error beatae illum nihil facilis! Praesentium tenetur assumenda doloribus quis perspiciatis officia!</p>
+    <p4>Laborum rem maxime voluptate, odio laudantium soluta, mollitia earum explicabo nobis dolores cupiditate dolorem. Facilis repellat vel, sunt placeat voluptate quisquam voluptas delectus nam ex dolore similique dolorum fugiat illo.</p>
+    <p5>Quia, consequatur harum, nam inventore eos quaerat iusto dolores minima amet autem laborum accusantium. Laboriosam laborum, quasi, deserunt ab necessitatibus quod vitae aliquid porro neque soluta eaque. Officia, suscipit mollitia.</p>
+    <p6>Aliquam iusto eaque, deserunt, incidunt, quod quam velit ea eos voluptatem quidem molestias. Earum, dicta! Omnis velit illo quis, quaerat ex quae dolores ea error sunt! Corrupti laborum ad labore?</p>
+    <p>Alias tempore dignissimos a facilis deserunt placeat aliquam error necessitatibus? Temporibus labore quos iusto illo explicabo mollitia ex ea consectetur nobis, dolore, repudiandae magni itaque, placeat nemo quisquam error accusantium?</p>
+    <p7>Ratione, sequi ipsa! Dolores quia aspernatur nobis vero est enim eligendi iure officia sint iste distinctio repellendus dolorem id assumenda explicabo, veniam maxime dolor in quisquam ex laboriosam fugiat tempore!</p>
+    <p8>Suscipit sapiente vero fuga deleniti laboriosam eligendi? Incidunt nemo voluptatem eligendi, adipisci natus corporis neque non. Laboriosam incidunt nulla id harum officiis cum illo qui ipsa repudiandae ad, recusandae expedita.</p>
+    <p9>Est et nemo sequi voluptas, quia, commodi, iusto accusantium reprehenderit temporibus accusamus cupiditate in necessitatibus quibusdam labore dolores assumenda. Porro quis facere vel tempora rem doloribus labore suscipit, ut id?</p> 
+  </div>
+  
   
 </body>
 </html>
