--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <img class="flag" src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
+  <img class="flag2"src="flag of kg.jpeg" alt="raise the flag">
 
   <h1>example</h1>
   <div>
