--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div>
     <p1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique voluptas officiis perferendis obcaecati omnis, officia cumque neque accusantium deleniti, a, reiciendis nihil maxime iste veniam placeat vero numquam quas odit.</p>
     <p2>Voluptatum libero explicabo commodi facere ex harum debitis repellendus et ratione? Amet quam eos omnis, explicabo incidunt dolorum rem pariatur molestias, soluta sint cumque debitis porro eaque id ex minus.</p>
+      <img class="coat"src="герб.jpeg" alt="coat of arm of Kyrgyzstan">
     <p3>Quam exercitationem excepturi obcaecati deleniti consequatur quibusdam quis veniam nemo incidunt accusantium eaque, amet iure harum praesentium ratione? Error beatae illum nihil facilis! Praesentium tenetur assumenda doloribus quis perspiciatis officia!</p>
     <p4>Laborum rem maxime voluptate, odio laudantium soluta, mollitia earum explicabo nobis dolores cupiditate dolorem. Facilis repellat vel, sunt placeat voluptate quisquam voluptas delectus nam ex dolore similique dolorum fugiat illo.</p>
     <p5>Quia, consequatur harum, nam inventore eos quaerat iusto dolores minima amet autem laborum accusantium. Laboriosam laborum, quasi, deserunt ab necessitatibus quod vitae aliquid porro neque soluta eaque. Officia, suscipit mollitia.</p>
