--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav> 
+    <ul>
+      <h2>Attributes of the Kyrgyz Republic</h2>
+    </ul>
+  </nav>
   <img class="flag" src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
   <img class="flag2"src="flag of kg.jpeg" alt="raise the flag">
 
