--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <nav> 
     <ul>
-      <h2>Attributes of the Kyrgyz Republic</h2>
+      <h1>Attributes of the Kyrgyz Republic</h1>
     </ul>
   </nav>
   <img class="flag" src="flag kg.jpeg" alt="flag of Kyrgyz Republic">
   <img class="flag2"src="flag of kg.jpeg" alt="raise the flag">
 
-  <h1>example</h1>
+  <h3>Flag of the Kyrgyz republik</h3>
   <div>
     <p1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique voluptas officiis perferendis obcaecati omnis, officia cumque neque accusantium deleniti, a, reiciendis nihil maxime iste veniam placeat vero numquam quas odit.</p>
     <p2>Voluptatum libero explicabo commodi facere ex harum debitis repellendus et ratione? Amet quam eos omnis, explicabo incidunt dolorum rem pariatur molestias, soluta sint cumque debitis porro eaque id ex minus.</p>
